2002-12-29  Roland McGrath  <roland@redhat.com>

	* resolv/res_libc.c: Move _res defn magic after res_init defn
	so _res macro is in effect for that code.

	* Makerules ($(common-objpfx)%.h $(common-objpfx)%.h.d): Fix sed
	pattern for prepending $(..) so it doesn't affect $(foo).

	* math/Makefile (generated): Add $(addsuffix .c .S,$(calls:s_%=m_%)).

2002-12-29  Jakub Jelinek  <jakub@redhat.com>

	* elf/cache.c (add_to_cache): Don't loop forever with 1ULL << 63 set
	in hwcap.

2002-12-28  Ulrich Drepper  <drepper@redhat.com>

	* misc/sys/cdefs.h (__attribute_deprecated__): New #define.

2002-12-28  Andreas Jaeger  <aj@suse.de>

	* sysdeps/generic/readelflib.c (process_elf_file): Cast value to
	avoid warning.
	* sysdeps/generic/dl-cache.c (_dl_load_cache_lookup): Likewise.

2002-12-27  Jakub Jelinek  <jakub@redhat.com>

	* inet/herrno.c (__h_errno_location): Remove.
	* inet/Makefile (routines): Add herrno-loc.
	* resolv/res_libc.c (__res_state): Remove.
	* resolv/Makefile (routines): Add res-state.
	* sysdeps/generic/herrno-loc.c: New file.
	* sysdeps/generic/res-state.c: New file.

2002-12-27  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/i386/sysdep.h (I386_USE_SYSENTER):
	Only define if USE_DL_SYSINFO is defined.

2002-12-22  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/sysdep.h (INLINE_SYSCALL,
	INTERNAL_SYSCALL, INTERNAL_SYSCALL_ERROR_P, INTERNAL_SYSCALL_ERROR):
	Define. Patch by Richard Henderson and Jes Sorensen.
	(PSEUDO): Remove unnecessary ;;.
	* elf/rtld.c (dl_main): Initialize TLS even if no PT_TLS segments
	are found unless TLS_INIT_TP_EXPENSIVE.  Use NONTLS_INIT_TP.
	* sysdeps/generic/libc-tls.c (__libc_setup_tls): Use NONTLS_INIT_TP
	if not initializing thread pointer.
	[!USE_TLS && NONTLS_INIT_TP] (__pthread_initialize_minimal): New.
	* sysdeps/generic/libc-start.c (__pthread_initialize_minimal): Don't
	make it weak also if NONTLS_INIT_TP.
	* sysdeps/unix/common/pause.c: Handle cancellation.